[ 2217907 ] Migrate from ejb2 to ejb3 - migrate to ejb3. - upgrade jboss to 4.2.3. - added glassfish support. tested on glassfish v2u2 - drop the tomcat-only deployment task that is not working, need jee server instead of just a servlet runtime.